--- a/styles/style.css
+++ b/styles/style.css
@@ -118,26 +118,26 @@ p {
 }
 
 .dog-detail .name {
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 .dog-detail .age-and-breed {
     height: 50px;
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 2rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
 .dog-detail img {
     margin: 40px;
-    width: 80%; 
+    width: 90%; 
 }
 
 
 .dog-detail .description {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin: 20px;
     padding: 20px;
 }
